flux/apps/interruption-spotter/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: interruption-spotter

spec:
  selector:
    matchLabels:
      app: interruption-spotter

  template:
    metadata:
      labels:
        app: interruption-spotter

    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data

      containers:
        - name: interruption-spotter
          image: ghcr.io/nint8835/interruption-spotter

          volumeMounts:
            - mountPath: /data
              name: data

          ports:
            - containerPort: 8080
              name: http
              protocol: TCP

          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "64Mi"
