flux/apps/interruption-spotter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interruption-spotter

spec:
  selector:
    app: interruption-spotter

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
